compiler/tests/fixtures/valid/precedence_arithmetic_over_relational.viv
// Arithmetic binding tighter than relational operators

action test-arith-rel:
    roles:
        @a:
            as: initiator
    conditions:
        @a.x + 1 > @a.y * 2
